<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cjapps.emergencynotifier.activities.Splash"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="512dp"
        android:layout_height="512dp"
        android:id="@+id/splash_screen_logo"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/app_logo"
        android:scaleType="fitStart"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:id="@+id/splash_screen_bottom_banner"
        android:background="@color/red_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/bottom_banner_desc" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/splash_screen_text"
        android:layout_above="@+id/splash_screen_bottom_banner"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_text_1"
            android:id="@+id/splash_screen_text_1"
            android:textColor="@color/red_light"
            android:textStyle="bold|normal"
            android:textSize="42sp"
            android:layout_toStartOf="@+id/splash_screen_text_2"
            android:layout_alignBaseline="@+id/splash_screen_text_2"
            android:layout_alignBottom="@+id/splash_screen_text_2"
            android:layout_toLeftOf="@+id/splash_screen_text_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_text_2"
            android:id="@+id/splash_screen_text_2"
            android:textStyle="bold|normal"
            android:textColor="@color/red_light"
            android:textSize="24sp"
            android:layout_toEndOf="@+id/splash_screen_text_2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_text_3"
            android:id="@+id/splash_screen_text_3"
            android:textColor="@color/red_light"
            android:textStyle="bold|normal"
            android:textSize="18sp"
            android:layout_toStartOf="@+id/splash_screen_text_4"
            android:layout_alignBaseline="@+id/splash_screen_text_4"
            android:layout_alignBottom="@+id/splash_screen_text_4"
            android:layout_toLeftOf="@+id/splash_screen_text_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_text_4"
            android:id="@+id/splash_screen_text_4"
            android:gravity="right|top"
            android:textColor="@color/red_light"
            android:textStyle="normal"
            android:textSize="72sp"
            android:layout_toEndOf="@+id/splash_screen_text_2"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/splash_screen_text_2" />

    </RelativeLayout>

</RelativeLayout>
