<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:background="@color/red_light">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_screen_contact_filter_layout"
        android:background="@drawable/red_button_background"
        android:clickable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_on_contact"
            android:id="@+id/main_screen_button_filter_on_contact"
            android:textColor="@android:color/white"
            android:textStyle="bold|normal"
            android:textSize="18sp"
            android:visibility="visible"
            android:layout_gravity="left"
            android:layout_toEndOf="@+id/main_screen_add_filter_on_contact_iv"
            android:gravity="left|top"
            android:background="#00ffffff"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="88dp" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/main_screen_add_filter_on_contact_iv"
            android:src="@drawable/ic_action_add_person"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/add_filter_on_contact" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_screen_contact_filter_layout"
        android:id="@+id/main_screen_group_filter_layout"
        android:background="@drawable/red_button_background"
        android:clickable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_alignLeft="@+id/main_screen_contact_filter_layout"
        android:layout_alignStart="@+id/main_screen_contact_filter_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_time"
            android:id="@+id/main_screen_button_filter_by_time"
            android:textColor="@android:color/white"
            android:textStyle="bold|normal"
            android:textSize="18sp"
            android:visibility="visible"
            android:layout_gravity="left"
            android:gravity="left|top"
            android:background="#00ffffff"
            android:layout_toEndOf="@+id/main_screen_add_filter_on_contact_iv"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="88dp" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/main_screen_add_filter_on_group_iv"
            android:src="@drawable/ic_action_add_group"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/add_filter_on_group" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_screen_group_filter_layout"
        android:background="@drawable/red_button_background"
        android:id="@+id/main_screen_view_filter_layout"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_alignLeft="@+id/main_screen_group_filter_layout"
        android:layout_alignStart="@+id/main_screen_group_filter_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/main_screen_view_filters_iv"
            android:src="@drawable/ic_action_view_filters"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/view_filters_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_filters"
            android:id="@+id/main_screen_button_view_filters"
            android:textColor="@android:color/white"
            android:textStyle="bold|normal"
            android:textSize="18sp"
            android:visibility="visible"
            android:layout_gravity="center"
            android:background="#00ffffff"
            android:gravity="center_vertical|center_horizontal"
            android:layout_toEndOf="@+id/main_screen_view_filters_iv"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="88dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/app_info"
        android:id="@+id/main_screen_app_info"
        android:padding="8dp"
        android:textStyle="normal|italic"
        android:textSize="14sp"
        android:textColor="@color/red_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_screen_filter_toggle_state"
        android:background="@drawable/card"
        android:layout_margin="8dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/filter_toggle_state_active"
        android:id="@+id/main_screen_filter_toggle_state"
        android:checked="true"
        android:textOn="Turn Off Emergency Call Notifier"
        android:textOff="Turn On Emergency Call Notifier"
        android:background="@drawable/red_button_background"
        android:textColor="@android:color/white"
        android:singleLine="false"
        android:textSize="16sp"
        android:gravity="center_vertical|left"
        android:layout_toStartOf="@+id/main_screen_filter_toggle"
        android:textStyle="normal|italic"
        android:layout_below="@+id/main_screen_view_filter_layout"
        android:paddingLeft="8dp"
        android:layout_alignRight="@+id/main_screen_view_filter_layout"
        android:layout_alignEnd="@+id/main_screen_view_filter_layout"
        android:layout_alignLeft="@+id/main_screen_view_filter_layout"
        android:layout_alignStart="@+id/main_screen_view_filter_layout" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:id="@+id/main_screen_filter_toggle"
        android:textSize="14sp"
        android:textStyle="bold|normal"
        android:background="@drawable/white_button_background"
        android:textColor="@color/red_light"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_alignTop="@+id/main_screen_filter_toggle_state"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:textOff="@string/turn_on"
        android:textOn="@string/turn_off" />

</RelativeLayout>
